--- a/CodeNameZetaAndroidApp/www/index.html
+++ b/CodeNameZetaAndroidApp/www/index.html
@@ -1,29 +1,52 @@
 ﻿<!DOCTYPE html>
 <html>
-    <head>
-    <!--
-        Customize the content security policy in the meta tag below as needed. Add 'unsafe-inline' to default-src to enable inline JavaScript.
-        For details, see http://go.microsoft.com/fwlink/?LinkID=617521
-    -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
-        
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>CodeNameZetaAndroidApp</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="theme-color" content="#2196f3">
+    <title>Framework7 Material</title>
+    <link rel="stylesheet" href="css/framework7.material.css">
+    <link rel="stylesheet" href="css/framework7.material.colors.css">
+    <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/material-icons.css">
+    <link rel="stylesheet" href="css/kitchen-sink.css">
+    <link rel="icon" href="img/icon.png">
+  </head>
+  <body class="theme-black">
+    <div class="statusbar-overlay"></div>
+    <div class="panel-overlay"></div>
+
+    <div class="views">
+      <div class="view view-main">
+        <div class="pages navbar-hidden">
+          <div data-page="swiper-horizontal" class="page">
+            <div class="page-content">            
+                <div data-pagination=".swiper-pagination" data-parallax="true" data-paginationHide="true" class="swiper-container swiper-init ks-demo-slider" data-speed="600">
+                    <div class="swiper-pagination">
+                    </div>
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide" style="background-image:url(img/slide-1.png); background-position:center; background-size:cover;">
+                        </div>
+                        <div class="swiper-slide">Slide 2</div>
+                        <div class="swiper-slide">Slide 3</div>
+                        <div class="swiper-slide">
+                        <a href="#" class="button button-big button-fill button-raised color-black" style="min-width:100px;">START</a>
+                        </div>
+                    </div>
+                    <a href="#" class="button button-raised" style="max-width:25px; top:-98%; right:-80%; color:black; border: 1px solid black; z-index: 1500;">SKIP</a>
+                </div> 
             </div>
+          </div>
         </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <!-- The 'async' attribute is needed for RequireJS to work in a Windows app -->
-        <script type="text/javascript" data-main="scripts/startup" src="lib/require.2.1.8.js" async></script>
-    </body>
+      </div>
+    </div>
+
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" data-main="scripts/startup" src="lib/require.2.1.8.js" async></script>
+    <script type="text/javascript" src="js/framework7.js"></script>
+    <script type="text/javascript" src="js/kitchen-sink.js"></script>
+  </body>
 </html>
