Introduced Server Directory

--- a/CodeNameZetaAndroidApp/www/index.html
+++ b/CodeNameZetaAndroidApp/www/index.html
@@ -48,7 +48,7 @@
                         <a href="#" class="button button-big button-fill button-raised color-black" style="min-width:100px;">START</a>
                         </div>
                     </div>
-                    <a href="#" class="button button-raised" style="max-width:25px; top:-98%; right:-80%; color:black; border: 1px solid black; z-index: 1500;">SKIP</a>
+                    <a href="signup.html" class="button button-raised external" style="max-width:25px; top:-98%; right:-80%; color:black; border: 1px solid black; z-index: 1500;">SKIP</a>
                 </div> 
             </div>
           </div>
