Added Server Directory in Project

--- a/CodeNameZetaAndroidApp/www/signup.html
+++ b/CodeNameZetaAndroidApp/www/signup.html
@@ -68,17 +68,7 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-media"><i class="icon material-icons">language</i></div>
-                                            <div class="item-inner">
-                                                <div class="item-title floating-label">URL</div>
-                                                <div class="item-input">
-                                                    <input type="url" placeholder="" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
+                                   
                                     <li>
                                         <div class="item-content">
                                             <div class="item-media"><i class="icon material-icons">lock_outline</i></div>
@@ -90,256 +80,21 @@
                                             </div>
                                         </div>
                                     </li>
+                                   
                                     <li>
                                         <div class="item-content">
-                                            <div class="item-media"><i class="icon material-icons">call</i></div>
+                                            <div class="item-media"><i class="icon material-icons">lock_outline</i></div>
                                             <div class="item-inner">
-                                                <div class="item-title floating-label">Phone</div>
+                                                <div class="item-title floating-label">Confirm Password</div>
                                                 <div class="item-input">
-                                                    <input type="tel" placeholder="" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-media"><i class="icon material-icons">people_outline</i></div>
-                                            <div class="item-inner">
-                                                <div class="item-title floating-label">Gender</div>
-                                                <div class="item-input">
-                                                    <select>
-                                                        <option> </option>
-                                                        <option>Male</option>
-                                                        <option>Female</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="align-top">
-                                        <div class="item-content">
-                                            <div class="item-media"><i class="icon material-icons">chat_bubble_outline</i></div>
-                                            <div class="item-inner">
-                                                <div class="item-title floating-label">Resizeable Textarea</div>
-                                                <div class="item-input">
-                                                    <textarea class="resizable"></textarea>
+                                                    <input type="password" placeholder="" />
                                                 </div>
                                             </div>
                                         </div>
                                     </li>
                                 </ul>
                             </form>
-                            <div class="content-block-title">Icons and inputs</div>
-                            <form class="list-block inputs-list">
-                                <ul>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-media"><i class="icon material-icons">person_outline</i></div>
-                                            <div class="item-inner">
-                                                <div class="item-input">
-                                                    <input type="text" placeholder="Your name" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-media"><i class="icon material-icons">email</i></div>
-                                            <div class="item-inner">
-                                                <div class="item-input">
-                                                    <input type="email" placeholder="E-mail" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-media"><i class="icon material-icons">people_outline</i></div>
-                                            <div class="item-inner">
-                                                <div class="item-input">
-                                                    <select>
-                                                        <option>Male</option>
-                                                        <option>Female</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-media"><i class="icon material-icons">today</i></div>
-                                            <div class="item-inner">
-                                                <div class="item-input">
-                                                    <input type="date" placeholder="Birth day" value="2014-04-30" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-media"><i class="icon material-icons">check</i></div>
-                                            <div class="item-inner">
-                                                <div class="item-input">
-                                                    <label class="label-switch">
-                                                        <input type="checkbox" />
-                                                        <div class="checkbox"></div>
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </form>
-                            <div class="content-block-title">Labels and inputs</div>
-                            <form class="list-block inputs-list">
-                                <ul>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-title label">Name</div>
-                                                <div class="item-input">
-                                                    <input type="text" placeholder="Your name" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-title label">E-mail</div>
-                                                <div class="item-input">
-                                                    <input type="email" placeholder="E-mail" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-title label">Gender</div>
-                                                <div class="item-input">
-                                                    <select>
-                                                        <option>Male</option>
-                                                        <option>Female</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-title label">Birth date</div>
-                                                <div class="item-input">
-                                                    <input type="date" placeholder="Birth day" value="2014-04-30" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-title label">Switch</div>
-                                                <div class="item-input">
-                                                    <label class="label-switch">
-                                                        <input type="checkbox" />
-                                                        <div class="checkbox"></div>
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </form>
-                            <div class="content-block-title">Just inputs</div>
-                            <form class="list-block inputs-list">
-                                <ul>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-input">
-                                                    <input type="text" placeholder="Your name" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-input">
-                                                    <input type="email" placeholder="E-mail" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-input">
-                                                    <select>
-                                                        <option>Male</option>
-                                                        <option>Female</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-input">
-                                                    <input type="date" placeholder="Birth day" value="2014-04-30" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </form>
-                            <div class="content-block-title">Inset, just inputs</div>
-                            <form class="list-block inset inputs-list">
-                                <ul>
-                                    <ul></ul>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-input">
-                                                    <input type="text" placeholder="Your name" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-input">
-                                                    <input type="email" placeholder="E-mail" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-input">
-                                                    <select>
-                                                        <option>Male</option>
-                                                        <option>Female</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-input">
-                                                    <input type="date" placeholder="Birth day" value="2014-04-30" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </form>
+                            <div class="content-block-title center">Icons and inputs</div>
                         </div>
                     </div>
                 </div>
