--- a/CodeNameZetaAndroidApp/www/signup.html
+++ b/CodeNameZetaAndroidApp/www/signup.html
@@ -27,6 +27,78 @@
             });
         });
     </script>
+    <style type="text/css">
+        /* Shared */
+        .loginBtn {
+            box-sizing: border-box;
+            position: relative;
+            /* width: 13em;  - apply for fixed size */
+            margin: 0.2em;
+            padding: 0 25px 0 52px;
+            border: none;
+            text-align: left;
+            line-height: 35px;
+            white-space: nowrap;
+            border-radius: 0.2em;
+            font-size: 16px;
+            color: #FFF;
+        }
+
+            .loginBtn:before {
+                content: "";
+                box-sizing: border-box;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 34px;
+                height: 100%;
+            }
+
+            .loginBtn:focus {
+                outline: none;
+            }
+
+            .loginBtn:active {
+                box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
+            }
+
+
+        /* Facebook */
+        .loginBtn--facebook {
+            background-color: #4C69BA;
+            background-image: linear-gradient(#4C69BA, #3B55A0);
+            /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
+            text-shadow: 0 -1px 0 #354C8C;
+        }
+
+            .loginBtn--facebook:before {
+                border-right: #364e92 1px solid;
+                background: url('img/facebook-logo.png') 0px 0px no-repeat;
+                background-size:cover;
+            }
+
+            .loginBtn--facebook:hover,.loginBtn--facebook:focus {
+                background-color: #5B7BD5;
+                background-image: linear-gradient(#5B7BD5, #4864B1);
+            }
+
+
+        /* Google */
+        .loginBtn--google {
+            /*font-family: "Roboto", Roboto, arial, sans-serif;*/
+            background: #DD4B39;
+        }
+
+            .loginBtn--google:before {
+                border-right: #BB3F30 1px solid;
+                background: url('img/google-plus-logo.png') 0px 0px no-repeat;
+                background-size: cover;
+            }
+
+            .loginBtn--google:hover,.loginBtn--google:focus {
+                background: #E74B37;
+            }
+    </style>
 </head>
 <body class="theme-black">
     <div class="statusbar-overlay"></div>
@@ -34,7 +106,7 @@
 
     <div class="views">
         <div class="view view-main">
-            <div class="pages navbar-hidden">
+            <div class="pages navbar-fixed">
                 <div data-page="swiper-horizontal" class="page">
                     <div data-page="form-elements" class="page">
                         <div class="navbar">
@@ -43,8 +115,8 @@
                             </div>
                         </div>
                         <div class="page-content">
-                            <div class="content-block-title">Sign Up</div>
-                            <form class="list-block inputs-list">
+                            <div class="content-block-title" style="padding: 0px; font-weight:800; font-size: 18px; overflow: visible;">Sign Up</div>
+                            <form class="list-block inputs-list" style="margin-bottom: 12px;">
                                 <ul>
                                     <li>
                                         <div class="item-content">
@@ -93,9 +165,34 @@
                                         </div>
                                     </li>
                                 </ul>
+
+                                <div class="content-block center" style="margin: 20px 0;">
+                                        <a href="#" class="button button-fill button-raised color-black center" style="width:50%; margin:auto;">Sign me up!</a>
+                                </div>
                             </form>
-                            <div class="content-block-title center">Icons and inputs</div>
-                        </div>
+                           
+                            <div class="content-block-title center" style="text-align: center; padding: 0px; margin: 0px;">
+                                <img src="img/hzdivider-right.png" style="vertical-align: middle;"/>
+                                &nbsp;
+                                <span>or log in with</span>
+                                &nbsp;
+                                <img src="img/hzdivider-left.png" style="vertical-align: middle;" />
+                                <br /><br />
+                                <button class="loginBtn loginBtn--facebook" style="margin-top: 15px;">
+                                    Facebook
+                                </button>
+
+                                <button class="loginBtn loginBtn--google" style="margin-top: 15px;">
+                                    Google
+                                </button>
+                                <br /><br /><br />
+                                <span style="vertical-align:middle; font-size:18px;">Already have an account? </span><a href="#" class="external center" style="margin: 10px auto; color: #000000;text-decoration:underline; vertical-align:middle; font-size:18px; font-weight:800; line-height: 19px;">Sign in</a>
+                            </div>
+                            <!--
+                            <div class="content-block-title center" style="line-height: 30px;text-align: center; padding: 2%; margin: 0px; background-color: #DEDEDE; bottom: 0; right: 0; z-index: 500; margin: 0;backface-visibility: hidden; color: #000000; position: fixed; width:100%; height: 5%;vertical-align:middle;">
+                                <span style="vertical-align:middle;">Already have an account? </span><a href="#" class="external center" style="margin: 10px auto; color: #000000;text-decoration:underline; vertical-align:middle;">Sign in</a>
+                            </div>
+                            -->
                     </div>
                 </div>
             </div>
