Design Sign Up Stage-2 R1

--- a/CodeNameZetaAndroidApp/www/signup_verify.html
+++ b/CodeNameZetaAndroidApp/www/signup_verify.html
@@ -57,7 +57,7 @@
                                 </ul>
 
                                 <div class="content-block center" style="margin: 20px 0;">
-                                    <a href="#" class="button button-fill button-raised color-black center" style="width:50%; margin:auto;">Authenticate</a>
+                                    <a href="signup_stage_2.html" class="button button-fill button-raised color-black center external" style="width:50%; margin:auto;">Authenticate</a>
                                     <br/><br />
                                     <span style="vertical-align:middle; font-size:18px;">Haven't received yet? </span><a href="#" class="external center" style="margin: 10px auto; color: #000000;text-decoration:underline; vertical-align:middle; font-size:18px; font-weight:800; line-height: 19px;">Re-send</a>
                                 </div>
