--- a/CodeNameZetaAndroidApp/www/index.html
+++ b/CodeNameZetaAndroidApp/www/index.html
@@ -59,7 +59,7 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" data-main="scripts/startup" src="lib/require.2.1.8.js" async></script>
     <script type="text/javascript" src="js/framework7.js"></script>
-    <script type="text/javascript" src="js/kitchen-sink.js"></script>
+    <!--<script type="text/javascript" src="js/kitchen-sink.js"></script>-->
     <script type="text/javascript" src="js/my-app.js"></script>
   </body>
 </html>
