neuron and signup updated

--- a/CodeNameZetaAndroidApp/www/signup.html
+++ b/CodeNameZetaAndroidApp/www/signup.html
@@ -81,6 +81,7 @@
 
                 if (validationCount == 3)
                 {
+                    //alert(validationCount);
                     var name = $("#userName").val();
                     var email = $("#userEmail").val();
                     var password = $("#userPassword").val();
@@ -140,7 +141,7 @@
                 }
                 else
                 {
-                    alert(validationCount);
+                    //alert(validationCount);
                 }
             }); 
         });
