--- a/CodeNameZetaAndroidApp/www/signup.html
+++ b/CodeNameZetaAndroidApp/www/signup.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/material-icons.css">
     <link rel="stylesheet" href="css/kitchen-sink.css">
     <link rel="stylesheet" href="css/materialPreloader.css">
+    <link rel="stylesheet" href="css/sso.css">
     <link rel="icon" href="img/icon.png">
     <script type="text/javascript" src="js/localforage.min.js"></script>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
@@ -41,11 +42,12 @@
                 col_1: '#999999',
                 col_2: '#cccccc',
                 col_3: '#e5e5e5',
-                col_4: '#7f7f7f',
-                fadeIn: 100,
-                fadeOut: 100
+                col_4: '#000000',
+                fadeIn: 1,
+                fadeOut: 1
             });
-            preloader.on();
+
+            preloader.off();
 
             //E-Mail Validation
             $("#btnSignUP").click(function () {
@@ -136,78 +138,6 @@
             }); 
         });
     </script>
-    <style type="text/css">
-        /* Shared */
-        .loginBtn {
-            box-sizing: border-box;
-            position: relative;
-            /* width: 13em;  - apply for fixed size */
-            margin: 0.2em;
-            padding: 0 25px 0 52px;
-            border: none;
-            text-align: left;
-            line-height: 35px;
-            white-space: nowrap;
-            border-radius: 0.2em;
-            font-size: 16px;
-            color: #FFF;
-        }
-
-            .loginBtn:before {
-                content: "";
-                box-sizing: border-box;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 34px;
-                height: 100%;
-            }
-
-            .loginBtn:focus {
-                outline: none;
-            }
-
-            .loginBtn:active {
-                box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
-            }
-
-
-        /* Facebook */
-        .loginBtn--facebook {
-            background-color: #4C69BA;
-            background-image: linear-gradient(#4C69BA, #3B55A0);
-            /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
-            text-shadow: 0 -1px 0 #354C8C;
-        }
-
-            .loginBtn--facebook:before {
-                border-right: #364e92 1px solid;
-                background: url('img/facebook-logo.png') 0px 0px no-repeat;
-                background-size:cover;
-            }
-
-            .loginBtn--facebook:hover,.loginBtn--facebook:focus {
-                background-color: #5B7BD5;
-                background-image: linear-gradient(#5B7BD5, #4864B1);
-            }
-
-
-        /* Google */
-        .loginBtn--google {
-            /*font-family: "Roboto", Roboto, arial, sans-serif;*/
-            background: #DD4B39;
-        }
-
-            .loginBtn--google:before {
-                border-right: #BB3F30 1px solid;
-                background: url('img/google-plus-logo.png') 0px 0px no-repeat;
-                background-size: cover;
-            }
-
-            .loginBtn--google:hover,.loginBtn--google:focus {
-                background: #E74B37;
-            }
-    </style>
 </head>
 <body class="theme-black">
     <div class="statusbar-overlay"></div>
@@ -217,96 +147,96 @@
         <div class="view view-main">
             <div class="pages navbar-fixed">
                 <div data-page="signup" class="page">
-                        <div class="navbar">
-                            <div class="navbar-inner">
-                                <div class="center">Zeta</div>
-                            </div>
+                    <div class="navbar">
+                        <div class="navbar-inner">
+                            <div class="center">Zeta</div>
                         </div>
-                        <div class="page-content">
-                            <div class="overlay-load"></div>
-                            <div class="content-block-title" style="padding: 0px;font-weight:800;font-size: 22px;overflow: visible;text-align: center;">Sign Up</div>
-                            <form class="list-block inputs-list" style="margin-bottom: 12px;">
-                                <ul>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-media"><i class="icon material-icons">person_outline</i></div>
-                                            <div class="item-inner">
-                                                <div class="item-title floating-label">Your name</div>
-                                                <div class="item-input">
-                                                    <input type="text" id="userName" name="userName" placeholder="" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-media"><i class="icon material-icons">email</i></div>
-                                            <div class="item-inner">
-                                                <div class="item-title floating-label">E-mail</div>
-                                                <div class="item-input">
-                                                    <input type="email" id="userEmail" name="userEmail" placeholder="" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-media"><i class="icon material-icons">lock_outline</i></div>
-                                            <div class="item-inner">
-                                                <div class="item-title floating-label">Password</div>
-                                                <div class="item-input">
-                                                    <input type="password" id="userPassword" name="userPassword" placeholder="" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-media"><i class="icon material-icons">lock_outline</i></div>
-                                            <div class="item-inner">
-                                                <div class="item-title floating-label">Confirm Password</div>
-                                                <div class="item-input">
-                                                    <input type="password" id="userConfirmPassword" name="userConfirmPassword" placeholder="" />
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-
-                                <div class="content-block center" style="margin: 20px 0;">
-                                        <a href="#" id ="btnSignUP" name="btnSignUP" class="button button-fill button-raised color-black center external" style="width:50%; margin:auto;">Sign me up!</a>
-                                </div>
-                            </form>
-
-                            <div class="content-block-title center" style="text-align: center; padding: 0px; margin: 0px;">
-                                <img src="img/hzdivider-right.png" style="vertical-align: middle;"/>
-                                &nbsp;
-                                <span>or log in with</span>
-                                &nbsp;
-                                <img src="img/hzdivider-left.png" style="vertical-align: middle;" />
-                                <br /><br />
-                                <button class="loginBtn loginBtn--facebook" style="margin-top: 15px;">
-                                    Facebook
-                                </button>
-
-                                <button class="loginBtn loginBtn--google" style="margin-top: 15px;">
-                                    Google
-                                </button>
-                                <br /><br /><br />
-                                <span style="vertical-align:middle; font-size:18px;">Already have an account? </span><a href="#" class="external center" style="margin: 10px auto; color: #000000;text-decoration:underline; vertical-align:middle; font-size:18px; font-weight:800; line-height: 19px;">Sign in</a>
-                            </div>
-                            <!--
-                            <div class="content-block-title center" style="line-height: 30px;text-align: center; padding: 2%; margin: 0px; background-color: #DEDEDE; bottom: 0; right: 0; z-index: 500; margin: 0;backface-visibility: hidden; color: #000000; position: fixed; width:100%; height: 5%;vertical-align:middle;">
-                                <span style="vertical-align:middle;">Already have an account? </span><a href="#" class="external center" style="margin: 10px auto; color: #000000;text-decoration:underline; vertical-align:middle;">Sign in</a>
-                            </div>
-                            -->
                     </div>
+                    <div class="page-content">
+                        <div class="overlay-load"></div>
+                        <div class="content-block-title" style="padding: 0px;font-weight:800;font-size: 22px;overflow: visible;text-align: center;">Sign Up</div>
+                        <form class="list-block inputs-list" style="margin-bottom: 12px;">
+                            <ul>
+                                <li>
+                                    <div class="item-content">
+                                        <div class="item-media"><i class="icon material-icons">person_outline</i></div>
+                                        <div class="item-inner">
+                                            <div class="item-title floating-label">Your name</div>
+                                            <div class="item-input">
+                                                <input type="text" id="userName" name="userName" placeholder="" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="item-content">
+                                        <div class="item-media"><i class="icon material-icons">email</i></div>
+                                        <div class="item-inner">
+                                            <div class="item-title floating-label">E-mail</div>
+                                            <div class="item-input">
+                                                <input type="email" id="userEmail" name="userEmail" placeholder="" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="item-content">
+                                        <div class="item-media"><i class="icon material-icons">lock_outline</i></div>
+                                        <div class="item-inner">
+                                            <div class="item-title floating-label">Password</div>
+                                            <div class="item-input">
+                                                <input type="password" id="userPassword" name="userPassword" placeholder="" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="item-content">
+                                        <div class="item-media"><i class="icon material-icons">lock_outline</i></div>
+                                        <div class="item-inner">
+                                            <div class="item-title floating-label">Confirm Password</div>
+                                            <div class="item-input">
+                                                <input type="password" id="userConfirmPassword" name="userConfirmPassword" placeholder="" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+
+                            <div class="content-block center" style="margin: 20px 0;">
+                                <a href="#" id="btnSignUP" name="btnSignUP" class="button button-fill button-raised color-black center external" style="width:50%; margin:auto;">Sign me up!</a>
+                            </div>
+                        </form>
+
+                        <div class="content-block-title center" style="text-align: center; padding: 0px; margin: 0px;">
+                            <img src="img/hzdivider-right.png" style="vertical-align: middle;" />
+                            &nbsp;
+                            <span>or log in with</span>
+                            &nbsp;
+                            <img src="img/hzdivider-left.png" style="vertical-align: middle;" />
+                            <br /><br />
+                            <button class="loginBtn loginBtn--facebook" style="margin-top: 15px;">
+                                Facebook
+                            </button>
+
+                            <button class="loginBtn loginBtn--google" style="margin-top: 15px;">
+                                Google
+                            </button>
+                            <br /><br /><br />
+                            <span style="vertical-align:middle; font-size:18px;">Already have an account? </span><a href="#" class="external center" style="margin: 10px auto; color: #000000;text-decoration:underline; vertical-align:middle; font-size:18px; font-weight:800; line-height: 19px;">Sign in</a>
+                        </div>
+                        <!--
+                        <div class="content-block-title center" style="line-height: 30px;text-align: center; padding: 2%; margin: 0px; background-color: #DEDEDE; bottom: 0; right: 0; z-index: 500; margin: 0;backface-visibility: hidden; color: #000000; position: fixed; width:100%; height: 5%;vertical-align:middle;">
+                            <span style="vertical-align:middle;">Already have an account? </span><a href="#" class="external center" style="margin: 10px auto; color: #000000;text-decoration:underline; vertical-align:middle;">Sign in</a>
+                        </div>
+                        -->
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" data-main="scripts/startup" src="lib/require.2.1.8.js" async></script>
         <script type="text/javascript" src="js/framework7.js"></script>
@@ -318,7 +248,6 @@
                 closeIcon: false,
                 hold: 2000
             });*/
-            
         </script>
 
 </body>
